# imgdoc2

./: .gitignore  CMakeLists.txt  CMakeSettings.json
.github/: codecov.yml
.github/workflows/: cmake.yml
cmake/: CodeCoverage.cmake  generate_compiler_options.cmake  libCZI.cmake
dotnet/ImgDoc2Net_UnitTests/: CreateOptionsTests.cs  DecodeTests.cs  ImgDoc2GlobalTests.cs
dotnet/imgdoc2Net/: ImgDoc2Net.csproj  imgdoc2.nuspec
dotnet/imgdoc2Net/Implementation/: Decoding.cs  ImgDoc2Global.cs  ImgDoc2VersionInfo.cs
dotnet/imgdoc2Net/Interfaces/: BitmapData.cs  IDecoding.cs  ImgDoc2ManagedLibraryVersionInfo.cs  ImgDoc2VersionInfo.cs
dotnet/imgdoc2Net/Interop/: ImgDoc2ApiInterop.cs  Utilities.cs
dotnet/imgdoc2cmd/: CommandQueryForTilesAndSaveTiles.cs  Options.cs  Program.cs  imgdoc2cmd.csproj
dotnet/imgdoc2cmd/Properties/: launchSettings.json
imgdoc2API/: CMakeLists.txt  allocationobject.h  bitmapinfointerop.h  codecsAPI.cpp  codecsAPI.h  decodedimageresultinterop.h  errorcodes.h  imgdoc2API.cpp  imgdoc2API.h  imgdoc2APIsupport.cpp  imgdoc2APIsupport.h
imgdoc2cmd/: imgdoc2cmd.cpp
imgdoc2sqliteextension/: CMakeLists.txt  imgdoc2sqliteextension.cpp
libSqliteExtension/: CMakeLists.txt  sqlite_custom_functions.cpp  sqlite_custom_functions.h
libimgdoc2/: CMakeLists.txt
libimgdoc2/inc/: ClassFactory.h  IDocumentMetadata.h  VersionInfo.h  exceptions.h
libimgdoc2/src/: libimgdoc2_config.h.in
libimgdoc2/src/db/: database_creator.cpp
libimgdoc2_tests/: CMakeLists.txt  metadata_test.cpp  query3d_test.cpp
misc/: test_convert.ps1
(+6 files in other folders)
